Update test code
Signed-off-by: Taylor Smock <tsmock@meta.com>